--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,7 @@ jobs:
           PCIT_EMAIL: khs1994@khs1994.com
           PCIT_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PCIT_GIT_URL: github.com/${{ github.repository }}
-          PCIT_KEEP_HISTORY: "1"
+          PCIT_KEEP_HISTORY: "true"
           PCIT_LOCAL_DIR: .git_tmp
           PCIT_MESSAGE: Sync from khs1994-php/configure@${{github.sha}} by PCIT
           PCIT_TARGET_BRANCH: pre
