--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,11 @@ on:
   push:
   pull_request:
   workflow_dispatch:
+    inputs:
+      PHP_REF:
+        description: php ref
+        required: true
+        default: master
   schedule:
     - cron: '0 0 */1 * *'
 
@@ -15,7 +20,7 @@ jobs:
       - uses: actions/checkout@master
         with:
           repository: php/php-src
-          ref: master
+          ref: {{github.event.inputs.PHP_REF}}
           fetch-depth: 2
       - run: mkdir .git_tmp
       - run: echo -e "PHP-master\n" > .git_tmp/configure.sh
