--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,7 +28,7 @@ jobs:
         if: github.event.inputs.PHP_REF == 'master' || github.event_name != 'workflow_dispatch'
       - run: |
           curl -fsSL -O https://www.php.net/distributions/php-${PHP_VERSION}.tar.gz
-          tar -zxvf php-${PHP_VERSION}.tar.gz -C $PWD
+          tar -zxvf php-${PHP_VERSION}.tar.gz --strip-components 1 -C $PWD 
         if: github.event.inputs.PHP_REF != 'master' && github.event_name == 'workflow_dispatch'
       - run: mkdir .git_tmp
       - run: echo -e "PHP-${PHP_VERSION:-master}\n" > .git_tmp/configure.sh
