--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
           tar -zxvf php-${PHP_VERSION}.tar.gz --strip-components 1 -C $PWD 
         if: github.event.inputs.PHP_REF != 'master' && github.event_name == 'workflow_dispatch'
       - run: mkdir .git_tmp
-      - run: echo -e "PHP-${PHP_VERSION:-master}\n" > .git_tmp/configure.sh
+      - run: set -x ; echo -e "PHP-${PHP_VERSION:-master}\n" > .git_tmp/configure.sh
       - run: ./buildconf --force
         if: github.event.inputs.PHP_REF == 'master' || github.event_name != 'workflow_dispatch'
       - run: ./configure --help >> .git_tmp/configure.sh
